modificando footer y categoria de productos

--- a/index.html
+++ b/index.html
@@ -88,12 +88,51 @@
             </div><!--division productos 4, 5 y 6-->
 
         </div> <!-- Div end productos-->
-        <div class="grid-item">
-            <h1>Categorías de Productos</h1>
-    
+        <div class="grid-item grid-container-categorias">
+            <div class="categorias"><h1>Categorías de Productos</h1></div>
+            <div class="categoria1">
+                <div class="imagen-categorias1"></div>
+                <div class="texto-categorias1"><h3>Oficina</h3></div>
+            </div> 
+            <div class="categoria2">
+                <div class="imagen-categorias2"></div>
+                <div class="texto-categorias2"><h3>Hogar</h3></div>
+            </div> 
+            <div class="categoria3">
+                <div class="imagen-categorias3"></div>
+                <div class="texto-categorias3"><h3>Cocina</h3></div>
+            </div> 
+
         </div><!-- Div end categorias-->
         <footer>
-            Esto es el footer
+            <div class="footer-categorias">
+                <div><h3>Categorias</h3></div>
+                <div>
+                    <div><a href="#">Cocina</a></div>
+                    <div><a href="#">Oficina</a></div>
+                    <div><a href="#">Jardín</a></div>
+                    <div><a href="#">Cochera</a></div>
+                    <div><a href="#">Dormitorios</a></div>
+                </div>
+            </div>
+            <div class="footer-sobre">
+                <div><h3>Sobre Nosotros</h3></div>
+                <div>
+                    <div><a href="#">Nuestra historia</a></div>
+                    <div><a href="#">Misión, Visión y valores</a></div>
+                    <div><a href="#">Carrera</a></div>
+                    <div><a href="#">Políticas de privacidad</a></div>
+                    <div><a href="#">Términos del servicio</a></div>
+                </div>
+            </div>
+            <div class="footer-Soporte">
+                <div><h3>Soporte</h3></div>
+                <div>
+                    <div><a href="#">Preguntas frecuentes</a></div>
+                    <div><a href="#">Ayuda en línea</a></div>
+                    <div><a href="#">Confianza y seguridad</a></div>
+                </div>
+            </div>
         </footer>
     </div>  <!-- div end "grid container" -->
 </body>
