espacios entre divs

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway&display=swap" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -28,7 +30,7 @@
         <div class="grid-item grid-container-productos">
             <div class="productos"><h1>Nuestros productos</h1></div>
             <div class="productos1 grid-container-productos1">
-                <div class="imagen-productos1"><img width="100%" src="producto1.jpg" alt="producto 1"></div>
+                <div class="imagen-productos1"></div>
                 <div class="texto-productos1">
                     <h3>Recamara Kella</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur adipisci suscipit ullam veniam architecto.</p>
@@ -135,6 +137,7 @@
             </div>
         </footer>
     </div>  <!-- div end "grid container" -->
+    <link rel="stylesheet" href="bootstrap.bundle.min.js">
 </body>
 
 </html>
