--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="app.css">
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="grid.css">
+    <link rel="stylesheet" href="mediaqueries.css">
+    <!--<link rel="stylesheet" href="bootstrap.min.css">-->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway&display=swap" rel="stylesheet">
     
 </head>
